Fixed Small Mistakes and Reformated code in Flghts FlightBookings Room Roombookings Hotel HotelBookings and their respective Controllers and Views.

--- a/Areas/NorthPole/Views/AdminViews/Index.cshtml
+++ b/Areas/NorthPole/Views/AdminViews/Index.cshtml
@@ -8,11 +8,11 @@
 		</div>
 		<div class="d-flex flex-column">
 			<img src="~/img//Hotel.png" style="width:300px; height:auto;" />
-			<a class="bttn button-one mt-1">View Posted Hotels</a>
+			<a asp-controller="Hotels" asp-action="Search" class="bttn button-one mt-1">View Posted Hotels</a>
 		</div >
 		<div class="d-flex flex-column" >
 			<img src="~/img//Airplane.png" style="width:300px; height:auto;"/>
-			<a class="bttn button-one mt-1">View Posted Airplanes</a>
+			<a asp-controller="Flights" asp-action="Search" class="bttn button-one mt-1">View Posted Flights</a>
 		</div>
 	</div>
 }
