--- a/Areas/NorthPole/Views/Rooms/Delete.cshtml
+++ b/Areas/NorthPole/Views/Rooms/Delete.cshtml
@@ -38,7 +38,8 @@
     </dl>
     <form asp-action="DeleteConfirmed" method="post">
         <input type="hidden" asp-for="RoomId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Delete" class="bttn button-danger" /> 
+        <a asp-action="Index" class="bttn button-one">Back to List</a>
     </form>
 
 </div>
