--- a/Areas/NorthPole/Views/FlightBookings/Create.cshtml
+++ b/Areas/NorthPole/Views/FlightBookings/Create.cshtml
@@ -30,8 +30,8 @@
                 <span asp-validation-for="NumberOfPassenger" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-                <a class="bttn button-two w-250 mt-3" asp-action="Index" >Back to List</a>
+                <input type="submit" value="Create" class="bttn button-one" />
+                <a class="bttn button-two  mt-3" asp-action="Index" >Back to List</a>
             </div>
         </form>
     </div>
