--- a/Areas/NorthPole/Views/Hotels/Details.cshtml
+++ b/Areas/NorthPole/Views/Hotels/Details.cshtml
@@ -40,11 +40,9 @@
          @if (User.IsInRole("Admin"))
     {
         <a asp-action="Edit" class="bttn button-one" asp-route-hotelId="@Model?.HotelId">Edit</a>
-<form asp-action="DeleteConfirmed" method="post" class="flight-action">
-        @Html.HiddenFor(model => model.HotelId)
-        <input type="submit" value="Delete" class="btn btn-danger" />
-    </form> }
-    <a href='javascript:history.go(-1)' class="bttn button-two ms-2">Back to List</a>
+        <a asp-action="Delete" class="bttn button-danger" asp-route-hotelId="@Model?.HotelId">Delete</a>
+    }
+    <a href='javascript:history.go(-1)' class="bttn button-two">Back to List</a>
 </div>
 
 
