--- a/Areas/NorthPole/Views/AdminViews/Index.cshtml
+++ b/Areas/NorthPole/Views/AdminViews/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@*
 *@
 @{
-	<div class="d-flex w-100 h-70v justify-content-between align-items-center">
+	<div class="d-flex w-100 h-70v justify-content-between align-items-center" id="admin-main">
 		<div class="d-flex flex-column">
 			<img src="~/img//Car.png" style="width:300px; height:auto;" />
 			<a asp-controller="Cars" asp-action="Search"  class="bttn button-one mt-1">View Posted Cars</a>
