--- a/Areas/NorthPole/Views/Hotels/Search.cshtml
+++ b/Areas/NorthPole/Views/Hotels/Search.cshtml
@@ -67,7 +67,7 @@
         }
         </div>
         <p>
-            <a class="bttn button-one mt-3 w-250 btn-primary" asp-area="" asp-action="Create">Add Hotel</a>
+            <a class="bttn button-one mt-3 w-250" asp-area="" asp-action="Create">Add Hotel</a>
         </p>
     </body>
 </html>
