--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -257,6 +257,9 @@ nav {
 .button-three {
     background: #b1b0d4;
 }
+.button-four {
+    background: #a7a7c2;
+}
 
     .input-one {
     box-shadow: inset #abacaf 0 0 0 2px;
