--- a/Areas/NorthPole/Views/Cars/Index.cshtml
+++ b/Areas/NorthPole/Views/Cars/Index.cshtml
@@ -44,6 +44,7 @@
                             <a asp-area="NorthPole"  asp-controller="Cars" class="bttn button-one w-250" asp-action="Details" asp-route-carId="@car.CarId">View Details</a>
                             <a asp-area="NorthPole"  asp-controller="CarBookings" class="bttn button-two w-250 mt-2" asp-action="Create" asp-route-carId="@car.CarId">Book This Car!</a>
                         <a asp-area="NorthPole" asp-controller="CarBookings" asp-action="Search" asp-route-CarId="@car.CarId" class="bttn button-three w-250 mt-2">View Availibility</a>
+                            <a asp-controller="CarReviews" class="bttn button-four w-250 mt-2" asp-action="Index" asp-route-CarId="@car.CarId">Read Reviews</a>
                     </div>
                  </div>
             }
