--- a/Areas/NorthPole/Views/Flights/SearchFlight.cshtml
+++ b/Areas/NorthPole/Views/Flights/SearchFlight.cshtml
@@ -76,7 +76,7 @@
         </div>
 
         <p>
-            <a class="bttn button-one mt-3 w-250 btn-primary" asp-area="" asp-action="Create">Add Flight</a>
+            <a class="bttn button-one mt-3 w-250" asp-area="" asp-action="Create">Add Flight</a>
         </p>
     </body>
 </html>
