--- a/Areas/NorthPole/Views/CarReviews/Create.cshtml
+++ b/Areas/NorthPole/Views/CarReviews/Create.cshtml
@@ -10,6 +10,7 @@
     <h1 class="text-center">Leave a Review</h1>
     <form asp-action="Create" class="d-flex flex-column col col-md-3 mx-auto">
         <input type="hidden" asp-for="CarId" value="@ViewBag.carId" />
+        <input type="hidden" asp-for="UserId" value="@ViewBag.userId" />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="d-flex flex-column">
             <label asp-for="Rating" class="control-label mt-3"></label>
