--- a/Views/Shared/_Navbar.cshtml
+++ b/Views/Shared/_Navbar.cshtml
@@ -36,7 +36,7 @@
                     <a class="nav-link " asp-area="NorthPole" asp-controller="Cars" asp-action="Index"><i class="fa-solid fa-car"></i> Car</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " asp-area="NorthPole" asp-controller="Home" asp-action="About"><i class="fa-solid fa-circle-question"></i> About</a></li>
+                    <a class="nav-link "asp-controller="Home" asp-action="About"><i class="fa-solid fa-circle-question"></i> About</a></li>
                 @if (User.IsInRole("Admin"))
                 {
                     <a class="bttn button-two" id="admin-button" asp-area="NorthPole" asp-controller="AdminViews" asp-action="Index">Admin Dashboard</a>
