--- a/Areas/NorthPole/Views/FlightBookings/Create.cshtml
+++ b/Areas/NorthPole/Views/FlightBookings/Create.cshtml
@@ -33,6 +33,7 @@
                 <input type="submit" value="Create" class="bttn button-one" />
                 <a class="bttn button-two  mt-3" asp-action="Index" >Back to List</a>
             </div>
+            <input type="hidden" asp-for="UserId" value="@ViewBag.UserId"/>
         </form>
     </div>
 </div>
